style: fix drop down SVG invisibility

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -87,7 +87,7 @@
   line-height: 1.5;
 }
 
-svg {
+.resume svg {
   height: 28px;
   width: 28px;
   fill: white;
